--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: "node_js"
 node_js:
-  - "0.10"
-  - "0.11"
+  - "0.10.29"
+before_install:
+  - "npm install -g npm@1.4.21"
 services:
   - couchdb
 script: "npm test"
