--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ node_js:
   - "0.10"
 before_install:
   - "npm install -g npm@1.4.21"
-services:
-  - couchdb
+  - "npm --version"
+  - "npm install -g couchapp"
 script: "npm test"
