--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "./push.sh",
     "load": "bash ./load-views.sh",
     "copy": "bash ./copy.sh",
-    "test": "tap test/*.js"
+    "test": "tap test/*.js --diag | tap-colorize"
   },
   "dependencies": {
     "couchapp": "~0.11.0",
@@ -18,6 +18,7 @@
     "request": "^2.36.0",
     "rimraf": "~2.2.6",
     "tap": "*",
+    "tap-colorize": "^1.2.0",
     "which": "^1.0.5"
   },
   "repository": {
