--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "./push.sh",
     "load": "bash ./load-views.sh",
     "copy": "bash ./copy.sh",
-    "test": "tap test/*.js --diag --timeout 100"
+    "test": "tap test/00-setup.js --diag --timeout 100"
   },
   "dependencies": {
     "couchapp": "~0.11.0",
