--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ before_install:
   - "npm install -g npm@1.4.21"
   - "npm --version"
   - "npm install -g couchapp"
+env:
+  - TAP_TIMEOUT 100
 script: "npm test"
