--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - "npm --version"
   - "npm install -g couchapp"
   - "couchdb -a test/fixtures/couch.ini &"
+  - "sleep 5"
   - "curl -X GET http://127.0.0.1:5984/"
   - "curl -X PUT http://127.0.0.1:5984/_config/log/level -d '\"debug\"'"
 env:
