--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ language: "node_js"
 node_js:
   - "0.10"
 before_install:
+  - "cat test/fixtures/couch.ini"
+  - "sudo couchdb -a test/fixtures/couch.ini \&"
   - "npm install -g npm@1.4.21"
   - "npm --version"
   - "npm install -g couchapp"
-  - "couchdb -a test/fixtures/couch.ini &"
   - "sleep 5"
   - "curl -X GET http://127.0.0.1:5984/"
   - "curl -X PUT http://127.0.0.1:5984/_config/log/level -d '\"debug\"'"
