--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "0.10"
 before_install:
   - "cat test/fixtures/couch.ini"
-  - "couchdb -a test/fixtures/couch.ini &"
+  - "couchdb -a test/fixtures/couch.ini || cat erl_crash.dump"
   - "npm install -g npm@1.4.21"
   - "npm --version"
   - "npm install -g couchapp"
