--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ node_js:
   - "0.10"
 before_install:
   - "cat test/fixtures/couch.ini"
-  - "couchdb -a test/fixtures/couch.ini || cat erl_crash.dump"
+  - "sudo mkdir -p /var/run/couchdb"
+  - "sudo chown -R couchdb /var/run/couchdb"
+  - "sudo couchdb -a test/fixtures/couch.ini"
   - "npm install -g npm@1.4.21"
   - "npm --version"
   - "npm install -g couchapp"
