--- a/test/fixtures/couch.ini
+++ b/test/fixtures/couch.ini
@@ -5,7 +5,7 @@ uuid = 3ec49bc6c314484cb21d684dc3fc778f
 delayed_commits	= false
 
 [httpd]
-#port = 15986
+port = 15986
 #bind_address = 127.0.0.1
 secure_rewrites = false
 allow_jsonp = true
