--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,16 @@ language: "node_js"
 node_js:
   - "0.10"
 before_install:
+  - "which npm"
   - "cat test/fixtures/couch.ini"
   - "sudo mkdir -p /var/run/couchdb"
   - "sudo chown -R couchdb /var/run/couchdb"
   - "sudo couchdb -a test/fixtures/couch.ini &"
-  - "npm install -g npm@1.4.21"
-  - "npm --version"
+#  - "npm install -g npm@1.4.21"
+#  - "npm --version"
   - "npm install -g couchapp"
-  - "curl -X GET http://127.0.0.1:15986/"
-  - "curl -X PUT http://127.0.0.1:15986/_config/log/level -d '\"debug\"'"
+  #- "curl -X GET http://127.0.0.1:15986/"
+  #- "curl -X PUT http://127.0.0.1:15986/_config/log/level -d '\"debug\"'"
 env:
   - TAP_TIMEOUT=100 DEPLOY_VERSION=testing
 after_failure:
