--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ before_install:
   - "which npm"
   - "npm --version"
   - "npm install -g couchapp"
-  #- "curl -X GET http://127.0.0.1:15986/"
-  #- "curl -X PUT http://127.0.0.1:15986/_config/log/level -d '\"debug\"'"
+  - "curl -X GET http://127.0.0.1:15986/"
+  - "curl -X GET http://localhost:15986/"
+  - "curl -X PUT http://127.0.0.1:15986/_config/log/level -d '\"debug\"'"
 env:
   - TAP_TIMEOUT=100 DEPLOY_VERSION=testing
 after_failure:
