try to fix dir permissions

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ before_install:
   - "cat test/fixtures/couch.ini"
   - "sudo mkdir -p /var/run/couchdb"
   - "sudo chown -R couchdb /var/run/couchdb"
+  - "sudo touch test/fixtures/registry.couch"
+  - "sudo touch test/fixtures/_users.couch"
+  - "sudo chown -R couchdb test/fixtures"
   - "sudo couchdb -a test/fixtures/couch.ini &"
   - "which npm"
   - "npm install -g npm@^2"
