--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ before_install:
   - "cat test/fixtures/couch.ini"
   - "sudo mkdir -p /var/run/couchdb"
   - "sudo chown -R couchdb /var/run/couchdb"
-  - "sudo touch test/fixtures/registry.couch"
-  - "sudo touch test/fixtures/_users.couch"
+  #- "sudo touch test/fixtures/registry.couch"
+  # "sudo touch test/fixtures/_users.couch"
   - "sudo chown -R couchdb test/fixtures"
   - "sudo couchdb -a test/fixtures/couch.ini &"
   - "which npm"
@@ -14,6 +14,7 @@ before_install:
   - "which npm"
   - "npm --version"
   - "npm install -g couchapp"
+  - "sleep 5"
   - "curl -X GET http://127.0.0.1:15986/"
   - "curl -X GET http://localhost:15986/"
   - "curl -X PUT http://127.0.0.1:15986/_config/log/level -d '\"debug\"'"
