try sudo in script

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,24 +2,24 @@ language: "node_js"
 node_js:
   - "0.10"
 before_install:
-  - "cat test/fixtures/couch.ini"
+  #- "cat test/fixtures/couch.ini"
   - "sudo mkdir -p /var/run/couchdb"
   - "sudo chown -R couchdb /var/run/couchdb"
   #- "sudo touch test/fixtures/registry.couch"
   # "sudo touch test/fixtures/_users.couch"
   - "sudo chown -R couchdb test/fixtures"
-  - "sudo couchdb -a test/fixtures/couch.ini &"
-  - "which npm"
+  #- "sudo couchdb -a test/fixtures/couch.ini &"
+  #- "which npm"
   - "npm install -g npm@^2"
-  - "which npm"
-  - "npm --version"
+  #- "which npm"
+  #- "npm --version"
   - "npm install -g couchapp"
-  - "sleep 5"
-  - "pwd"
-  - "curl -X GET http://127.0.0.1:15986/"
-  - "curl -X GET http://localhost:15986/"
-  - "curl -X PUT http://127.0.0.1:15986/_config/log/level -d '\"debug\"'"
-  - "curl -X PUT http://localhost:15986/_config/log/level -d '\"debug\"'"
+  #- "sleep 5"
+  #- "pwd"
+  #- "curl -X GET http://127.0.0.1:15986/"
+  #- "curl -X GET http://localhost:15986/"
+  #- "curl -X PUT http://127.0.0.1:15986/_config/log/level -d '\"debug\"'"
+  #- "curl -X PUT http://localhost:15986/_config/log/level -d '\"debug\"'"
 env:
   - TAP_TIMEOUT=100 DEPLOY_VERSION=testing
 after_failure:
