--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,10 @@ before_install:
   - "sudo chown -R couchdb /var/run/couchdb"
   #- "sudo touch test/fixtures/registry.couch"
   # "sudo touch test/fixtures/_users.couch"
-  - "sudo chown -R couchdb test/fixtures"
-  - "sudo mkdir -p test/fixtures/._users_design"
-  - "sudo chown -R couchdb test/fixtures/._users_design"
+  # - "sudo chown -R couchdb test/fixtures"
   #- "sudo couchdb -a test/fixtures/couch.ini &"
   #- "which npm"
-  - "npm install -g npm@^2"
+  # - "npm install -g npm@^2"
   #- "which npm"
   #- "npm --version"
   - "npm install -g couchapp"
