--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ node_js:
   - "0.10"
   - "0.11"
 before_install:
-  - "sudo mkdir -p /var/run/couchdb"
+  - "npm config set spin false"
   - "npm install -g npm@^2"
-#  - "npm install -g couchapp"
+  - "sudo mkdir -p /var/run/couchdb"
 env:
   - DEPLOY_VERSION=testing
 script: "npm test"
